--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kay</groupId>
-	<artifactId>java_professional</artifactId>
+	<artifactId>java-professional</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
     <build>
         <plugins>
