--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,12 @@
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>20.0</version>
-        </dependency>
+		
+                <dependency>
+                        <groupId>com.google.guava</groupId>
+                        <artifactId>guava</artifactId>
+                        <version>[24.1.1,)</version>
+                </dependency>
 
 		<dependency>
 			<groupId>joda-time</groupId>
