--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>[24.1.1,)</version>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>io.netty</groupId>-->
+        <!--            <artifactId>netty-all</artifactId>-->
+        <!--            <version>4.1.50.Final</version>-->
+        <!--        </dependency>-->
+
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
