--- a/pom.xml
+++ b/pom.xml
@@ -10,29 +10,30 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <packaging>jar</packaging>
+								<groupId>org.apache.maven.plugins</groupId>
+								<artifactId>maven-compiler-plugin</artifactId>
+								<version>3.8.1</version>
+								<configuration>
+										<source>8</source>
+										<target>8</target>
+								</configuration>
+						</plugin>
+				</plugins>
+		</build>
+		<packaging>jar</packaging>
 
-    <name>JavaProfessional</name>
-    <description>JavaProfessional</description>
+		<name>java-professional</name>
+		<description>java-professional</description>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.lmax</groupId>
-            <artifactId>disruptor</artifactId>
-            <version>3.4.2</version>
-        </dependency>
+		<dependencies>
+				<dependency>
+						<groupId>com.lmax</groupId>
+						<artifactId>disruptor</artifactId>
+						<version>3.4.2</version>
+				</dependency>
 
-        <dependency>
-            <groupId>org.openjdk.jol</groupId>
+				<dependency>
+						<groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.10</version>
         </dependency>
@@ -72,33 +73,6 @@
             <version>2.13.2</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--            <artifactId>jackson-databind</artifactId>-->
-<!--            <version>2.10.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--            <artifactId>jackson-datatype-jdk8</artifactId>-->
-<!--            <version>2.10.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
-<!--            <artifactId>jackson-datatype-jsr310</artifactId>-->
-<!--            <version>2.10.0</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.module</groupId>-->
-<!--            <artifactId>jackson-module-parameter-names</artifactId>-->
-<!--            <version>2.10.0</version>-->
-<!--        </dependency>-->
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
 </project>
