--- a/pom.xml
+++ b/pom.xml
@@ -1,78 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.kay</groupId>
-    <artifactId>java-professional</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-								<groupId>org.apache.maven.plugins</groupId>
-								<artifactId>maven-compiler-plugin</artifactId>
-								<version>3.8.1</version>
-								<configuration>
-										<source>8</source>
-										<target>8</target>
-								</configuration>
-						</plugin>
-				</plugins>
-		</build>
-		<packaging>jar</packaging>
-
+		<groupId>com.kay</groupId>
+		<artifactId>java-professional</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 		<name>java-professional</name>
 		<description>java-professional</description>
+		<packaging>jar</packaging>
+
+		<properties>
+				<disruptor.version>3.4.2</disruptor.version>
+				<jol-core.version>0.10</jol-core.version>
+				<cglib.version>3.2.4</cglib.version>
+				<lombok.version>1.18.16</lombok.version>
+				<guava.version>30.1.1-jre</guava.version>
+				<log4j-api.version>2.13.2</log4j-api.version>
+				<log4j-core.version>2.13.2</log4j-core.version>
+				<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+				<target-source.version>8</target-source.version>
+				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		</properties>
 
 		<dependencies>
 				<dependency>
 						<groupId>com.lmax</groupId>
 						<artifactId>disruptor</artifactId>
-						<version>3.4.2</version>
+						<version>${disruptor.version}</version>
 				</dependency>
-
 				<dependency>
 						<groupId>org.openjdk.jol</groupId>
-            <artifactId>jol-core</artifactId>
-            <version>0.10</version>
-        </dependency>
-
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>3.2.4</version>
-        </dependency>
+						<artifactId>jol-core</artifactId>
+						<version>${jol-core.version}</version>
+				</dependency>
+				<dependency>
+						<groupId>cglib</groupId>
+						<artifactId>cglib</artifactId>
+						<version>${cglib.version}</version>
+				</dependency>
 				<dependency>
 						<groupId>org.projectlombok</groupId>
 						<artifactId>lombok</artifactId>
-						<version>1.18.16</version>
+						<version>${lombok.version}</version>
 						<scope>provided</scope>
 				</dependency>
+				<dependency>
+						<groupId>com.google.guava</groupId>
+						<artifactId>guava</artifactId>
+						<version>${guava.version}</version>
+				</dependency>
+				<dependency>
+						<groupId>org.apache.logging.log4j</groupId>
+						<artifactId>log4j-api</artifactId>
+						<version>${log4j-api.version}</version>
+				</dependency>
+				<dependency>
+						<groupId>org.apache.logging.log4j</groupId>
+						<artifactId>log4j-core</artifactId>
+						<version>${log4j-core.version}</version>
+				</dependency>
+		</dependencies>
 
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>[24.1.1,)</version>
-        </dependency>
-
-        <!--        <dependency>-->
-        <!--            <groupId>io.netty</groupId>-->
-        <!--            <artifactId>netty-all</artifactId>-->
-        <!--            <version>4.1.50.Final</version>-->
-        <!--        </dependency>-->
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.13.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.13.2</version>
-        </dependency>
-
-    </dependencies>
-
+		<build>
+				<plugins>
+						<plugin>
+								<groupId>org.apache.maven.plugins</groupId>
+								<artifactId>maven-compiler-plugin</artifactId>
+								<version>${maven-compiler-plugin.version}</version>
+								<configuration>
+										<source>${target-source.version}</source>
+										<target>${target-source.version}</target>
+								</configuration>
+						</plugin>
+				</plugins>
+		</build>
 </project>
