--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,18 @@
 				<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		</properties>
 
+		<dependencyManagement>
+				<dependencies>
+						<dependency>
+								<groupId>org.junit</groupId>
+								<artifactId>junit-bom</artifactId>
+								<version>5.7.1</version>
+								<type>pom</type>
+								<scope>import</scope>
+						</dependency>
+				</dependencies>
+		</dependencyManagement>
+
 		<dependencies>
 				<dependency>
 						<groupId>com.lmax</groupId>
@@ -60,6 +72,11 @@
 						<groupId>org.apache.logging.log4j</groupId>
 						<artifactId>log4j-core</artifactId>
 						<version>${log4j-core.version}</version>
+				</dependency>
+				<dependency>
+						<groupId>org.junit.jupiter</groupId>
+						<artifactId>junit-jupiter</artifactId>
+						<scope>test</scope>
 				</dependency>
 		</dependencies>
 
