--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,7 @@
         <cglib.version>3.2.4</cglib.version>
         <lombok.version>1.18.16</lombok.version>
         <guava.version>30.1.1-jre</guava.version>
-        <log4j-api.version>[2.17.1,)</log4j-api.version>
-        <log4j-core.version>[2.17.1,)</log4j-core.version>
+        <log4j.version>[2.17.2,)</log4j.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <target-source.version>11</target-source.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,12 +65,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>${log4j-api.version}</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>${log4j-core.version}</version>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
